objects/zkmulti__PermissionSetting__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PermissionObject__c</fullName>
        <label>Permission Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PermissionType__c</fullName>
        <label>Permission Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Profile__c</fullName>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permission_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Permission Setting</label>
    <listViews>
        <fullName>Nolan_Daigle_PermissionSetting</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Permission Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>